[package]
authors = ["Ben Lambert"]
description = "Charming plotting for Nushell"
repository = "https://github.com/lambertsbennett/nu_plugin_charming"
edition = "2021"
license = "MIT"
name = "nu_plugin_charming"
version = "0.1.0"

[lib]
bench = false

[dependencies]
nu-protocol  = "0.87.1" 
nu-plugin = "0.87.1"

bincode = "1.3"
rmp-serde = "1.1"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
num = { version = "0.4.1" }
charming = { version = "0.3.1" }
